# robotframework-libdoc2testbench

./: .gitignore  Development.md  LICENSE  MANIFEST.in  README.md  Setup.py  createPip_whl_tar.bat  fix_model.py  pyproject.toml  requirements.txt  setup.cfg  xsdata_config.xml
libdoc2testbench/: __init__.py  __main__.py  arg_parser.py  argument_api.py  datatype_creator.py  datatype_storage.py  import_generator.py  interaction_creator.py  libdoc_generation.py  pk_generator.py  project_dump_builder.py  testbench_import_generator.py  uid_generator.py  utils.py
libdoc2testbench/project_dump_model/: __init__.py  itb_project_export.py  model_api.py
res/: example_usage.stg  projectmanagement_view.stg
resources/: itb-project-export.xsd  project-dump.xml
src/Libdoc2TestBench/: __init__.py  __main__.py  testbenchwriter.py
test/: explanation.md
test/RF413 + old library/: project-dump.xml
test/RF5 + fixed Library/: project-dump.xml
