[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pylint.FORMAT]
max-line-length = 100
max-module-lines = 1000

[tool.pylint.MASTER]
ignore = "tests"

[tool.pylint.BASIC]
argument-naming-style = 'snake_case'
attr-naming-style = 'snake_case'
class-naming-style = 'PascalCase'
const-naming-style = 'UPPER_CASE'
function-naming-style = 'snake_case'
method-naming-style = 'snake_case'
module-naming-style = 'snake_case'
variable-naming-style = 'snake_case'

[tool.pylint.DESIGN]
# Maximum number of arguments for function / method.
max-args = 5
# Maximum number of statements in function / method body.
max-statements = 50

[tool.pylint."MESSAGES CONTROL"]
disable = '''
    logging-fstring-interpolation,
    fixme,
    import-error,
    missing-module-docstring,
    missing-class-docstring,
    missing-function-docstring,
    too-many-instance-attributes,
    too-few-public-methods,
'''

[tool.pylint.REFACTORING]
# Maximum number of nested blocks for function / method body
max-nested-blocks = 3

[tool.mypy]
python_version = "3.8"
ignore_missing_imports = true
no_implicit_optional = true
strict_optional = true
warn_return_any = true
warn_no_return = true
warn_unreachable = true
pretty = true
exclude = ["test_libraries/"]

[tool.black]
target-version = ['py38']
line-length = 100
include_trailing_comma = false
skip-string-normalization = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra --spec"
testpaths = [
    "tests",
]
spec_header_format = "{test_case}"

[tool.ruff]
unfixable = [
    "UP007"
]
exclude = [
  "__pycache__",
  "config.py",
  "model.py",
  "tests"
]
ignore = [
  "B008",  # do not perform function calls in argument defaults
  "E501",  # line too long
  # "N815",  # mixedCase variable in class scope
  # "N803",  # argument name should be lowercase
  # "N806",  # variable in function should be lowercase
  # "N812",  # lowercase imported as non lowercase
  # "N999",  # Invalid module name: 'Browser'
  "PLR0913",  # too many arguments
  # "T201",  # Print statements
  "UP007",
]
target-version = "py37"
select = [
  "E",
  "F",
  "W",
  "C90",
  "I",
  "N",
  "B",
  "PYI",
  "PL",
  "PTH",
  "UP",
  "A",
  "C4",
  "DTZ",
  "ISC",
  "ICN",
  "INP",
  "PIE",
  "T20",
  "PYI",
  "PT",
  "RSE",
  "RET",
  "SIM",
  "RUF"
]