[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.mypy]
python_version = "3.8"
ignore_missing_imports = true
no_implicit_optional = true
strict_optional = true
warn_return_any = true
warn_no_return = true
warn_unreachable = true
pretty = true
exclude = ["test_libraries/"]

[tool.black]
target-version = ['py38']
line-length = 100
include_trailing_comma = false
skip-string-normalization = true

[tool.ruff]
unfixable = [
    "UP007"
]
exclude = [
  "__pycache__",
  "config.py",
  "model.py",
  "tests"
]
ignore = [
  "B008",
  "B904",
  "E501",
  "N815",
  "N803",
  "N806",
  "N812",
  "N999",
  "PLR0913",
]
target-version = "py38"
select = [
  "E",
  "F",
  "W",
  "C90",
  "I",
  "N",
  "B",
  "PYI",
  "PL",
  "PTH",
  "UP",
  "A",
  "C4",
  "DTZ",
  "ISC",
  "ICN",
  "INP",
  "PIE",
  "T20",
  "PYI",
  "PT",
  "RSE",
  "RET",
  "SIM",
  "RUF"
]