[metadata]
name = libdoc2testbench
author = imbus AG
version = attr: libdoc2testbench.__version__
description = Generates TestBench project imports from Robot Framework libdoc.
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache 2.0 License
url =
platforms = any

[options]
zip_safe = False
packages = find:
python_requires = >= 3.8
install_requires =
    robotframework >= 4.0
    attrs >= 19.2.0
    xsdata-attrs >= 23.8

[options.entry_points]
console_scripts =
    tb2robot = testbench2robotframework.__main__:run
    testbench2robotframework = testbench2robotframework.__main__:run

[options.extras_require]
dev =
    xsdata-attrs[cli]
    black
    flake8
    pylint
    mypy
    pytest
    pytest-cov
    pytest-spec
    check-manifest
    twine
    wheel
    setuptools
    ruff
    pip-tools

[options.packages.find]
exclude =
    tests
