[metadata]
name = robotframework-libdoc2testbench
author = imbus AG
version = attr: libdoc2testbench.__version__
description = Robot Framework Libdoc Extension that generates imbus TestBench Library import formats.
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache 2.0 License
url = https://github.com/imbus/robotframework-libdoc2testbench
platforms = any
classifiers =
    Environment :: Console
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Operating System :: OS Independent
    License :: OSI Approved :: Apache Software License
    Topic :: Software Development :: Testing
    Topic :: Software Development :: Testing :: Acceptance
    Framework :: Robot Framework

[options]
zip_safe = False
packages = find:
python_requires = >= 3.8
install_requires =
    robotframework >= 5.0, < 8.0
    xsdata

[options.entry_points]
console_scripts =
    libdoc2testbench = libdoc2testbench.__main__:run
    Libdoc2TestBench = libdoc2testbench.__main__:run

[options.extras_require]
dev =
    xsdata[cli]
    black
    flake8
    pylint
    mypy
    pytest
    pytest-cov
    pytest-spec
    check-manifest
    twine
    wheel
    setuptools
    ruff
    pip-tools

[options.packages.find]
exclude =
    tests
